concluir OS metade

--- a/views/admin/ordemServico/concluir.ejs
+++ b/views/admin/ordemServico/concluir.ejs
@@ -25,10 +25,10 @@
         </div>
 
         <div class="form-floating mb-3" id="func">
-            <select name="func" id="funcval" class="form-control">
+            <select name="func" id="funcjafeito" class="form-control">
             <option value="" selected><%=os.nomeFuncionario%></option>
             </select>
-            <label for="funcval">Funcionário responsável:</label>
+            <label for="funcjafeito">Funcionário responsável:</label>
         </div>
 
         <div class="form-floating mb-3" id="comentario"> 
@@ -36,25 +36,70 @@
             <label for="comentarioval">Comentários:(Opcional)</label>
         </div>
 
+        <h4>Adicionar Sub-Itens ao Serviço</h4>
+        <div class="row">  
+            <div class="form-floating mb-3 col-3" id="subItem">
+                <input type="text" name="subItem" id="subItemval" class="form-control" placeholder=" ">
+                <label for="subItemval">Nome Sub-Item:</label>
+            </div>
+            <div class="form-floating mb-3 col-sm-5" id="procurarFunc">
+                <input type="text" class="form-control" id="procurarFuncval" placeholder=" " maxlength="100">
+                <label for="procurarFuncval">Insira o nome do funcionário responsável:</label>
+            </div>
+            <div class="form-floating mb-3 col-lg-4" id="func">
+                <select name="func" id="funcval" class="form-control">
+                <option value="0" selected>Busque o funcionário no campo ao lado...</option>
+                </select>
+                <label for="funcval">Funcionário responsável:</label>
+            </div>            
+        </div>
+        <div>
+            <button class="btn btn-primary mb-4" id="AddSubItem">Adicionar Sub-Item à Ordem de Serviço</button>
+            <span class="text-danger align-items-center" id="msgErroSubItem"></span>
+        </div>
+        <table class="table table-bordered mt-3" id="tableSubItem" style="color: #000;">
+            <thead>
+                <th>ID</th>
+                <th>Sub-Item</th>
+                <th>Funcionário</th>
+            </thead>
+        </table>
+        <br><br>
+
+        <h4>Adicionar Insumos ao Serviço</h4>
         <div class="row">
             <div class="form-floating mb-3 col-3" id="procurarInsumo"> 
                 <input type="text" class="form-control" id="procurarInsumoval" placeholder=" " maxlength="100">
                 <label for="procurarInsumoval">Selecione o insumo utlizado:</label>
             </div>
-            <div class="form-floating mb-3 col-6" id="pessoa">
-                <select name="pessoa" id="pessoaval" class="form-control">
+            <div class="form-floating mb-3 col-5" id="pessoa">
+                <select name="pessoa" id="insumoval" class="form-control">
                     <option value="0" selected>Busque o insumo no campo ao lado...</option>
                 </select>
-                <label for="pessoaval">Insumo:</label>
+                <label for="insumoval">Insumo:</label>
             </div>
-            <div class="form-floating mb-3 col-3" id="quantidade">
-                <input type="text" name="quantidade" id="quantidadeval" class="form-control">
+            <div class="form-floating mb-3 col-4" id="quantidade">
+                <input type="text" name="quantidade" id="quantidadeInsumoval" class="form-control" placeholder=" ">
                 <label for="quantidadeval">Quantidade:</label>
             </div>
         </div>
+        <div>
+            <button class="btn btn-primary mb-4" id="AddInsumo">Adicionar insumo à Ordem de Serviço</button>
+            <span class="text-danger align-items-center" id="msgErroInsumo"></span>
+        </div>
+        <table class="table table-bordered mt-3" id="" style="color: #000;">
+            <thead>
+                <th>ID</th>
+                <th>Insumo</th>
+                <th>Quantidade</th>
+                <th>Remover</th>
+            </thead>
+            <tbody id="tableInsumo">
+            </tbody>
+        </table>
+        <br><br>
         
-        <button class="btn btn-primary mb-4" id="cadastrar">Adicionar à Ordem de Serviço</button><br>
-        <button class="btn btn-primary" id="cadastrar">Concluir Ordem de Serviço</button>
+        <button class="btn btn-primary" id="concluirOS">Concluir Ordem de Serviço</button>
         <a href="/admin/OrdemServicos" class="btn btn-secondary">Voltar</a>
     </div>
 </div>
